--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,9 @@ Imports:
     clisymbols,
     readr,
     clipr,
-    dplyr
+    dplyr,
+    tidyr,
+    rlang
 Suggests: 
     testthat
+Depends: R (>= 2.10)
