--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(build_tokyo)
 import(dplyr)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(tibble,tibble)
 importFrom(tidyr,replace_na)
