--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(tibble,tibble)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,spread)
