--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: gluwasp
 Version: 0.0.0.9000
 Title: The Global Urban Water Supply Database
 Description: A dataset combining infrastructual, hydrological, and institutional water supply statistics for the world's major cities.
-Authors@R: person("Sean", "Turner", email = "sean.turner@protonmail.com",
+Authors@R: person("Sean", "Turner", email = "seanturner@protonmail.com",
                                     role =  c("aut", "cre"),
                                     comment = c(ORCID = "0000-0003-4400-9800"))
 License: MIT + file LICENSE
